kinda stable version, started with ServiceProvider.java to enable OpenGL ES 2 compatibility